Fix Screen collapsing

--- a/src/components/Screen/styles.scss
+++ b/src/components/Screen/styles.scss
@@ -57,7 +57,7 @@ $screen-box-shadow: 0 ($screen-padding / 2 - 1) $screen-padding 0 rgba(0, 0, 0, 
 }
 
 .screen__main {
-	flex: 1 1 auto;
+	flex: 1 0 0;
 	display: flex;
 	flex-direction: column;
 	padding: 1rem 1rem 0;
